feat: enhanced AdCampaign and AdEvent models to support targeting, ad types, and analytics
- Added location, ageGroup, and interestTags fields to AdCampaign
- Added AdType enum for ad content categorization
- Introduced remainingBudget and clicks tracking in AdCampaign
- Enhanced AdEvent with optional ip and location fields
- Updated entities to reflect real-time dashboard and targeting engine needs